--- a/client/src/pages/Landing/Hero/style.scss
+++ b/client/src/pages/Landing/Hero/style.scss
@@ -3,7 +3,7 @@
   margin-bottom: 5rem;
   width: 100vw;
   height: 60rem;
-  background: linear-gradient(to right, #49a09f, rgb(40, 119, 153));
+  background: linear-gradient(to right, #49a09f, #287799);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   // border-bottom-right-radius: 30%;
   text-align: center;
