--- a/client/src/pages/Landing/About/style.scss
+++ b/client/src/pages/Landing/About/style.scss
@@ -16,6 +16,7 @@
   }
 
   &__title {
+    display: inline;
     flex: 0 0 5rem;
     position: relative;
     font-family: 'Montserrat', 'Lato', sans-serif;
@@ -31,7 +32,7 @@
     left: 0;
     background: hsla(0,0%,56%,.25);
     height: 2px;
-    width: 6em;
+    width: 100%;
   }
 
   &__body {
