--- a/client/src/pages/Landing/BecomeAnOrganizer/style.scss
+++ b/client/src/pages/Landing/BecomeAnOrganizer/style.scss
@@ -1,14 +1,16 @@
-.expect {
+.organizer {
   margin-bottom: 5rem;
-  padding: 5rem !important;
+  padding: 5rem;
+  background: linear-gradient(to right, #49a09f, #287799);
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: flex-start;
+  color: white;
 
   &__image {
-    clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
-    height: 30rem;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+    height: 40rem;
   }
 
   &__content {
@@ -16,8 +18,8 @@
   }
 
   &__title {
-    display: inline;
     flex: 0 0 5rem;
+    display: inline;
     position: relative;
     font-family: 'Montserrat', 'Lato', sans-serif;
     font-size: 4rem;
@@ -30,7 +32,7 @@
     content: "";
     bottom: -0.5rem;
     left: 0;
-    background: hsla(0,0%,56%,.25);
+    background: rgba(255,255,255,.25);
     height: 2px;
     width: 100%;
   }
@@ -46,6 +48,6 @@
   }
 }
 
-.about > *:not(:last-child) {
+.organizer > *:not(:last-child) {
     margin-right: 2rem;
 }
