--- a/client/src/pages/Landing/EventSchedule/style.scss
+++ b/client/src/pages/Landing/EventSchedule/style.scss
@@ -43,6 +43,7 @@
     font-family: 'Montserrat', 'Lato', sans-serif;
     font-size: 4rem;
     font-weight: 900;
+    display: inline;
   }
 
   &__title::after {
@@ -53,7 +54,7 @@
     left: 0;
     background: rgba(255,255,255, 0.25);
     height: 2px;
-    width: 6em;
+    width: 100%;
   }
 
   &__selector > &__day:not(:last-child) {
