--- a/client/src/pages/Landing/FAQ/style.scss
+++ b/client/src/pages/Landing/FAQ/style.scss
@@ -42,6 +42,7 @@
   }
 
   &__title {
+    display: inline;
     flex: 0 0 60%;
     color: #fff;
     position: relative;
@@ -58,7 +59,7 @@
     left: 0;
     background: rgba(255, 255, 255, 0.15);
     height: 2px;
-    width: 14.8em;
+    width: 100%;
   }
 
   &__list {
