--- a/client/src/pages/Landing/Sponsors/style.scss
+++ b/client/src/pages/Landing/Sponsors/style.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   &__title {
+    display: inline;
     flex: 0 0 5rem;
     position: relative;
     font-family: 'Montserrat', 'Lato', sans-serif;
@@ -20,7 +21,7 @@
     left: 0;
     background: hsla(0,0%,56%,.25);
     height: 2px;
-    width: 4em;
+    width: 100%;
   }
 
   &__category {
