--- a/client/src/pages/Landing/About/style.scss
+++ b/client/src/pages/Landing/About/style.scss
@@ -8,6 +8,7 @@
 
   &__image {
     clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);
+    box-shadow: 0px 10px 10px rgba(0,0,0,0.5);
     height: 40rem;
   }
 
