--- a/client/src/pages/Landing/Footer/style.scss
+++ b/client/src/pages/Landing/Footer/style.scss
@@ -7,6 +7,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 -5px 8px rgba(0,0,0,0.2);
 
   &__message {
     color: white;
