Adding in basic user profiles

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,4 +1,13 @@
 // Global Styling
-h1, h2, h3, h4, h5 {
- font-family: "Proxima Nova", sans-serif; 
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  font-family: 'Proxima Nova', sans-serif;
+}
+
+p {
+  font-size: 1.15rem;
 }
